[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urllib3-lts"
version = "2025.50182"
description = "LTS Security Dispatcher for urllib3"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
dependencies = [
    "urllib3-lts-py37==2025.50181 ; python_version >= '3.7' and python_version < '3.8'",
    "urllib3-lts-py38==2025.50182 ; python_version >= '3.8' and python_version < '3.9'",
    "urllib3>=2.3.0 ; python_version >= '3.9'" 
]

[project.urls]
Homepage = "https://github.com/1minds3t/urllib3-lts"
