[build-system]
requires = ["hatchling>=1.6.0"]
build-backend = "hatchling.build"

[project]
name = "urllib3-lts-py38"
version = "2025.66471"
description = "LTS Security Backport for Python 3.8. Fixes CVE-2025-66471, CVE-2025-66418, CVE-2025-50182, CVE-2025-50181."
readme = "README.md"
requires-python = ">=3.8, <3.9"
license = "MIT"
authors = [{name = "1minds3t", email = "1minds3t@proton.me"}]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/1minds3t/urllib3-lts"
